# JobMarket-Data-Pipeline

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: data_job_market.db
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/: sources.yml
dbt/models/gold/: _gold_models.yml  dim_companies.sql  dim_offers.sql  dim_skills.sql  fct_offer_salaries.sql  fct_offer_skills.sql
dbt/models/silver/: _silver.yml  stg_offer_employment_types.sql  stg_offer_required_skills.sql  stg_offers.sql
etl/: bronze_layer.py  create_raw_llm_enrichment_table.py  gathering_offers.py  gathering_slugs.py  load_raw_llm_enrichment.py  load_unified_job_titles.py  load_unified_skill_name.py
